tests/src/Loader/classloader/generics/Instantiation/Negative/abstract10.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    class _generics_Instantiation_Negative_abstract10_abstract10_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_abstract10_abstract10_cmd()
        {
            int rv = CoreClrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\abstract10\\abstract10.cmd");
            Assert.Equal(rv, CoreClrTestWrapperLib.EXIT_SUCCESS_CODE);
        }
    }
}
